--- a/src/main/resources/templates/fragment.html
+++ b/src/main/resources/templates/fragment.html
@@ -33,6 +33,9 @@
         <li class="nav-item">
           <a class="nav-link" th:classAppend="${current == 'degrees'} ? active : not-active" href="/degrees">I nostri corsi</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" th:classAppend="${current == 'teachers'} ? active : not-active" href="/teachers">I nostri Insegnanti</a>
+        </li>
       </ul>
       <form class="d-flex">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
