Effettuata consegna base con footer

--- a/src/main/resources/templates/fragment.html
+++ b/src/main/resources/templates/fragment.html
@@ -45,6 +45,103 @@
   </div>
 </nav>
     </th:block>
+    
+    <th:block th:fragment="background">
+<div class="has-bg-img">
+  <img class="bg-img" src="img/backgroud.jpg" alt="background">
+</div>	</th:block>
+    
+<th:block th:fragment="footer">
+<!-- Footer -->
+<footer class="bg-dark text-center text-lg-start bg-light text-muted">
+  <!-- Section: Links  -->
+  <section class="" >
+    <div class="container text-center text-md-start mt-5 ">
+      <!-- Grid row -->
+      <div class="row mt-3">
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+          <!-- Content -->
+          <h6 class="text-uppercase fw-bold mb-4">
+            <i class="fas fa-gem me-3"></i>Università E-Campus
+          </h6>
+          <p>
+            Ciao se ti interessa altro di noi di seguito trovi tante altre informazioni!
+          </p>
+        </div>
+        <!-- Grid column -->
 
+        <!-- Grid column -->
+        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold mb-4">
+            I nostri migliori corsi
+          </h6>
+          <p>
+            <a href="#!" class="text-reset">Economia</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">Tecnologia Alimentare</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">Giurisprudenza</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">Informatica</a>
+          </p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold mb-4">
+            Link utili
+          </h6>
+          <p>
+            <a href="#!" class="text-reset">Prezzi</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">Opzioni</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">Ordina Online</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">Aiuto!</a>
+          </p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold mb-4">
+            I nostri contatti:
+          </h6>
+          <p><i class="fas fa-home me-3"></i> Via Ponte di Tappia, 47, 80133 Napoli NA</p>
+          <p>
+            <i class="fas fa-envelope me-3"></i>
+            staff@ecampus.com
+          </p>
+          <p><i class="fas fa-phone me-3"></i> 081 420 3121</p>
+          <p><i class="fas fa-print me-3"></i> 334 1524 155</p>
+        </div>
+        <!-- Grid column -->
+      </div>
+      <!-- Grid row -->
+    </div>
+  </section>
+  <!-- Section: Links  -->
+
+  <!-- Copyright -->
+  <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+    © 2021 Copyright:
+    <a class="text-reset fw-bold" href="https://mdbootstrap.com/">www.ecampusjana.com</a>
+  </div>
+  <!-- Copyright -->
+</footer>
+<!-- Footer -->
+ </th:block>
 </body>
 </html>
