--- a/src/main/resources/templates/fristpage.html
+++ b/src/main/resources/templates/fristpage.html
@@ -5,9 +5,11 @@
     <title>Benvenuto in E-Campus</title>
   </head>
   <body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <div th:replace="fragment :: navbaruni('fristpage')"></div>
+    <div th:replace="fragment :: background"> </div>
     <div class="container">
-    <h1>Benvenuto in E-Campus</h1>
+    <h1 class="text-center">Benvenuto in E-Campus</h1>
     
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-indicators">
@@ -36,5 +38,6 @@
   </button>
 </div>
     </div>
+    <div th:replace="fragment :: footer"> </div>
   </body>
 </html>
