Effettuato Bonus finale completo con errore 404 per insegnante non esistente

--- a/src/main/resources/templates/fragment.html
+++ b/src/main/resources/templates/fragment.html
@@ -16,7 +16,7 @@
 	</th:block>
     <title>Document</title>
 </head>
-<body>
+<body class="p-3 mb-2 bg-dark text-white">
 <th:block th:fragment="navbaruni(current)">
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container-fluid">
