--- a/src/main/resources/templates/error/4xx.html
+++ b/src/main/resources/templates/error/4xx.html
@@ -3,15 +3,14 @@
 
 
     <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Bootstrap 5 404 Error Page</title>
+        <div th:replace="fragment :: risorse"></div>
+        <title>404 Error Page</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     </head>
 
 
     <body>
+    <div th:replace="fragment :: navbaruni('')"></div>
         <div class="d-flex align-items-center justify-content-center vh-100">
             <div class="text-center">
                 <h1 class="display-1 fw-bold">Errore 404</h1>
@@ -19,9 +18,12 @@
                 <p class="lead">
                     La pagina che stai cercando non esiste.
                   </p>
-                <a href="/" class="btn btn-primary">Torna alla home</a>
+                       <div th:text="|${message}|"></div>
+
+                <a href="/" class="mt-4 btn btn-primary">Torna alla home</a>
             </div>
         </div>
+        <div th:replace="fragment :: footer"> </div>
     </body>
 
 
