--- a/src/main/resources/templates/fragment.html
+++ b/src/main/resources/templates/fragment.html
@@ -16,11 +16,11 @@
 	</th:block>
     <title>Document</title>
 </head>
-<body class="p-3 mb-2 bg-dark text-white">
+<body >
 <th:block th:fragment="navbaruni(current)">
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container-fluid">
-  <img src="img/eCampus-logo.png" style="height:50px"  class="w-20 px-3" alt="...">
+  <img src="/img/eCampus-logo.png" style="height:50px"  class="w-20 px-3" alt="...">
     <a class="navbar-brand" href="/">Università E-Campus</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
